--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
             
             <div id="navigation" class="collapse navbar-collapse flex-column" >
                 <div class="profile-section pt-3 pt-lg-0">
-                    <a href="/"><img class="profile-image mb-3 rounded-circle mx-auto" src="{% static '/images/linkedin_picture.jpg' %}" alt="image" ></a>			
+                    <a href="/"><img class="profile-image mb-3 rounded-circle mx-auto" src="{% static '/images/linkedin_picture.JPG' %}" alt="image" ></a>			
                     
                     <div class="bio mb-3">Hi, my name is Kristian Buhl and I'm a CRO specialist & data analyst. Welcome to my personal website!</div><!--//bio-->
                     <ul class="social-list list-inline py-2 mx-auto">
