--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -84,7 +84,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_npslifetime.jpg' %}" class="card-img" alt="image">
+									<img src="{% static '/images/project/DS_npslifetime.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 5-->
@@ -109,7 +109,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_cltc.jpg' %}" class="card-img" alt="image">
+									<img src="{% static '/images/project/DS_clv.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 4-->
