--- a/templates/index.html
+++ b/templates/index.html
@@ -16,8 +16,8 @@
 						<h2 class="name font-weight-bold mb-1" >Kristian Buhl Jørgensen</h2>
 						<div class="tagline mb-3">Data Enthusiast, Decision Optimizer</div>
 						<div class="bio mb-4">I'm a data analyst specialised in machine learning and A/B tests for optimizing data-driven decision making. 
-							I write about data science, programming, web development etc. on <a class="text-link" href="blog-home.html">my blog</a>. Want to know more about me and my work? 
-							Check out my project <a class="text-link" href="projects.html">portfolio</a> and <a class="text-link" href="resume.html">online resume</a>.
+							I write about data science, programming, web development etc. on <a class="text-link" href="/bloghome">my blog</a>. Want to know more about me and my work? 
+							Check out my project <a class="text-link" href="/portfolio">portfolio</a> and <a class="text-link" href="/resume">online resume</a>.
 						</div><!--//bio-->
 						<div class="mb-4">
 							<a class="btn btn-primary me-2 mb-3" href="portfolio"><i class="fas fa-arrow-alt-circle-right me-2"></i><span class="d-none d-md-inline">View</span> Portfolio</a>
@@ -26,7 +26,7 @@
 					</div><!--//col-->
 					
 					<div class="col-md-5 col-lg-5">
-					    <img style="margin-left:10%;margin-right:10% !important;"class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="{% static '/images/linkedin_picture.jpg' %}" alt="">
+					    <img style="margin-left:10%;margin-right:10% !important;"class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="{% static '/images/linkedin_picture.JPG' %}" alt="">
 					</div>
 				</div>
 			</div>
@@ -147,85 +147,6 @@
 							</div><!--//item-inner-->
 						</div><!--//item-->
 						
-						<div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div><!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="{% static '/images/clients/profile-3.png' %}" alt="image"/>
-									</div>
-									<div class="meta">
-										<div class="name">James Lee</div>
-										<div class="info">Product Manager, Amazon</div>
-									</div>
-								</div>
-						    </div><!--//item-inner-->
-						</div><!--//item-->
-						
-						<div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div><!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="{% static '/images/clients/profile-4.png' %}" alt="image"/>
-									</div>
-									<div class="meta">
-										<div class="name">James Lee</div>
-										<div class="info">Product Manager, Amazon</div>
-									</div>
-								</div>
-						    </div><!--//item-inner-->
-						</div><!--//item-->
-						
-						<div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div><!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="{% static '/images/clients/profile-5.png' %}" alt="image"/>
-									</div>
-									<div class="meta">
-										<div class="name">Olivia White</div>
-										<div class="info">Product Manager, Dropbox</div>
-									</div>
-								</div>
-						    </div><!--//item-inner-->
-						</div><!--//item-->
-						
-						<div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div><!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="{% static '/images/clients/profile-6.png' %}" alt="image"/>
-									</div>
-									<div class="meta">
-										<div class="name">Samuel Reyes</div>
-										<div class="info">CTO, StartupHub</div>
-									</div>
-								</div>
-						    </div><!--//item-inner-->
-						</div><!--//item-->
 					</div><!--//testimonial-carousel-->	
 				</div><!--//testimonial-carousel-container-->	
 			</div><!--//container-->
@@ -289,7 +210,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_npslifetime.jpg' %}" class="card-img" alt="image">
+									<img src="{% static '/images/project/DS_npslifetime.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
@@ -313,7 +234,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_cltc.jpg' %}" class="card-img" alt="image">
+									<img src="{% static '/images/project/DS_clv.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
