image file format changed

--- a/templates/projects/cro-a2r-recommendation-popup.html
+++ b/templates/projects/cro-a2r-recommendation-popup.html
@@ -65,7 +65,7 @@
 						</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-12 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_a2crecom_variation1.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_a2crecom_variation1.JPG' %}" alt="image">
 						    </div>
 						    {% comment %} <div class="col-12 col-lg-6 mb-5">
 							    <img class="img-fluid rounded" src="{% static '/images/project/project-figure-2.jpg' %}" alt="image">
