--- a/templates/projects/cro-voucher-test.html
+++ b/templates/projects/cro-voucher-test.html
@@ -66,10 +66,10 @@
 							For the control variant, the onsite voucher was only visible in the upper green bar above the navigation section.</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_voucher1.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_voucher1.JPG' %}" alt="image">
 						    </div>
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_voucher2.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_voucher2.JPG' %}" alt="image">
 						    </div>
 					    </div>
 						    
