--- a/templates/projects/datascience-nps-drivers.html
+++ b/templates/projects/datascience-nps-drivers.html
@@ -62,10 +62,10 @@
 							</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_npsdriver_oc.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_npsdriver_oc.JPG' %}" alt="image">
 						    </div>
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_npsdriver_dev.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_npsdriver_dev.JPG' %}" alt="image">
 						    </div>
 					    </div>
 						    
