--- a/templates/projects/datascience-nps-lifetime.html
+++ b/templates/projects/datascience-nps-lifetime.html
@@ -87,7 +87,7 @@
 						</p>
 						<div class="row mt-5">
 						    <div class="col-12 col-lg-15 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_npslifetime2.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_npslifetime2.JPG' %}" alt="image">
 						    </div>
 					    </div>
 					</div><!--//project-section-->
