--- a/templates/projects/cro-pdp-sticky-cta.html
+++ b/templates/projects/cro-pdp-sticky-cta.html
@@ -65,10 +65,10 @@
 							Below you can see examples of the control and test variant for the test.</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_stickycta_control.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_stickycta_control.JPG' %}" alt="image">
 						    </div>
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_stickycta_variation.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_stickycta_variation.JPG' %}" alt="image">
 						    </div>
 					    </div>
 						    
