--- a/templates/projects/datascience-cac-cltc.html
+++ b/templates/projects/datascience-cac-cltc.html
@@ -80,7 +80,7 @@
 						</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-12 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_clv.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_clv.JPG' %}" alt="image">
 						    </div>
 						    <!-- <div class="col-12 col-lg-6 mb-5">
 							    <img class="img-fluid rounded" src="{% static '/images/project/project-figure-2.jpg' %}" alt="image">
