--- a/templates/projects/datascience-on-the-fence-users-popup.html
+++ b/templates/projects/datascience-on-the-fence-users-popup.html
@@ -87,10 +87,10 @@
 						</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_otf_model.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_otf_model.JPG' %}" alt="image">
 						    </div>
 						    <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_otf_ss.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static '/images/project/pic_otf_ss.JPG' %}" alt="image">
 						    </div>
 					    </div>
 
