--- a/templates/blog-home.html
+++ b/templates/blog-home.html
@@ -7,9 +7,9 @@
 <div class="main-wrapper">
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container text-center">
-			    <h2 class="heading">A Blog About Data Science, CRO & Web Development</h2>
-			    <div class="intro" style='padding-left:5%;padding-right:5%;'>Welcome! The purpose of this blog is to provide practical approaches and inspiring perspectives on topics related to Data Science, CRO and Web Dev.		
-									The aim is to provide some <a href="https://arxiv.org/pdf/1907.11168.pdf">first intuitions</a> (hence the name of the website) that can inspire you to progress/initiate new projects and ideas. 
+			    <h2 class="heading">A Blog About Data Science & Web Dev</h2>
+			    <div class="intro" style='padding-left:5%;padding-right:5%;'>Welcome! The purpose of this blog is to provide practical approaches and inspiring perspectives on topics related to data science and web dev.		
+									 
 									<br>
 									<br>
 									<div class="intro" id="subscribetext">Subscribe to get my latest posts in your inbox.</div></div>
