--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -11,7 +11,7 @@
 			    <h2 class="heading">Portfolio</h2>
 			    <div class="intro">
 			    <p>Welcome to my online portfolio. Here you can see a short description and the main results of some of my professional projects.  
-					Please feel free to reach out, if you are interested in knowing more about me and my projects, or if you want to connect and share knowledge. 
+					Please feel free to reach out, if you are interested in knowing more, or if you want to connect and share knowledge. 
 					</p>
 			    </div>
 			    <a class="btn btn-primary" href="/contact" target="_blank"><i class="fas fa-paper-plane me-2"></i>Contact Me</a>
@@ -40,7 +40,7 @@
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 3-->
-										<h5 class="card-title"><a href="project/web-data-privacy-engineering" class="theme-link">GTM Data Privacy Engineering</a></h5>
+										<h5 class="card-title"><a href="project/web-data-privacy-engineering" class="theme-link">Data Privacy Engineering</a></h5>
 										<p class="card-text">Implementing a compliant Google Tag Manager (GTM) setup while using Server Side GTM for minimizing data loss in Google Analytics.</p>
 										{% comment %} <p class="card-text"><small class="text-muted">Client: Startup Hub</small></p> {% endcomment %}
 									</div>
@@ -256,7 +256,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_urgencycheckout.JPG' %}" class="card-img" alt="image">
+									<img src="{% static '/images/project/CRO_a2cpopup.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">  <!--//project 14-->
