--- a/templates/projects/cro-pdp-few-left-product-tags.html
+++ b/templates/projects/cro-pdp-few-left-product-tags.html
@@ -59,8 +59,8 @@
 					
 					<div class="project-section mb-5">
 					     <h3 class="project-section-title">The Approach &amp; Solution</h3>
-					    <p>To proceed with the project, I defined the following hypothesis: <b>Addding “Few left” tags on the product page will improve conversion rate</b>. By displaying info on the stock level up front for the user, you ignite a sense of urgency in the user that translates into action if relevant.
-							To test this hypothesis, I developed a test variant of the product detail page with the addition of "Few Left" tags in the sticky cta section and on the upper-right corner of the primary product image.
+					    <p>To proceed with the project, I defined the following hypothesis: <b>Addding “Few left” tags on the product page will improve conversion rate</b>. By displaying stock level info up front for the user, you ignite a sense of urgency in the user that translates into action if the product is relevant.
+							To test this hypothesis, I developed a test variant of the product detail page with the addition of "Few Left" tag in the sticky cta section and on the upper-right corner of the primary product image.
 							Below you can see examples of the control and test variant for the test.</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-6 mb-5">
@@ -101,43 +101,15 @@
 									     <div class="metric-desc">Conversion Rate Uplift</div>
 								     </div>
 							     </div><!--//metric-->
-							    {% comment %} <div class="metric col-6 col-xl-3 mb-3">
-								     <div class="inner p-3 theme-bg-light">
-										<div class="metric-name">Effect</div>
-										<div class="metric-data mb-2">+6%</div>
-										<div class="metric-desc">Conversion Rate Uplift</div>
-								     </div>
-							     </div><!--//metric--> {% endcomment %}
-						     </div><!--//row-->
+							    </div><!--//row-->
 					     </div><!--//metrics-->
 					     
-					    <p>With more than 881.000 test sessions, the proved significant in lifting the conversion rate (<b>+6%</b>) and the add to cart rate (<b>+7%</b>) - i.e. the hypothesis could be accepted. 
-							With these performance uplifts, a full implementation of the "Few Left" product tag feature on all Miinto websites would drive an estimated +7-10M EUR GOV annually - all of this with minimal development required as the feature can be activted directly from the frontend. 
+					    <p>With more than 880K test sessions, the test proved sucessfull in significantly lifting the conversion rate (<b>+6%</b>) and the add to cart rate (<b>+7%</b>) - i.e. the hypothesis can be accepted. 
+							With these performance uplifts, a full implementation of the "Few Left" product tag feature on all Miinto websites would drive an estimated +7-10M EUR GOV annually - all of this with minimal development required as the feature can be activated directly from the frontend. 
 							As a result, this feature has been added for the Miinto tech roadmap awaiting deployment in the upcoming future. 
 						</p>
 					     
 					</div><!--//project-section-->
-					
-					{% comment %} <div class="project-section mb-5">
-					     <h3 class="project-section-title mb-3">Client Testimonial</h3>
-                    </div><!--//project-section-->
-				    <div class="client-quote">
-						<div class="quote-holder">
-							<blockquote class="quote-content">
-								Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-							</blockquote>
-							<i class="fas fa-quote-left"></i>
-						</div><!--//quote-holder-->
-						<div class="source-holder">
-							<div class="source-profile">
-								<img src="{% static '/images/clients/profile-4.png' %}" alt="image"/>
-							</div>
-							<div class="meta">
-								<div class="name">James Lee</div>
-								<div class="info">Product Manager, Amazon</div>
-							</div>
-						</div>
-					</div> {% endcomment %}
 				</div>
 		    </div>
 	    </section>
@@ -149,9 +121,7 @@
 		    </div><!--//container-->
 	    </section><!--//promo-section-->
     
-		{% comment %} <footer class="footer text-center py-4">
-					<small class="copyright">Template Copyright &copy; <a href="https://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>
-				</footer> {% endcomment %}
+		
 
     </div><!--//main-wrapper-->
 
