--- a/templates/projects/datascience-cac-cltc.html
+++ b/templates/projects/datascience-cac-cltc.html
@@ -16,31 +16,7 @@
 	    </section>
 	    <section class="project px-3 py-5 p-md-5" style='padding-top: 0px !important;padding-bottom: 0px !important;'>
 		    <div class="container">
-			    {% comment %} <div class="project-meta theme-bg-light p-4">
-				    <div class="row g-4 g-lg-5">
-					    <div class="col-md-5 col-lg-4 col-xxl-3 d-none d-md-block">
-					        <img class="project-thumb img-fluid rounded" src="{% static '/images/project/project-3.jpg' %}" alt="">
-					    </div><!--//col-->
-						<div class="col-12 col-md-7 col-lg-8 col-xxl-9">
-						    <div class="client-info">
-							    <h3 class="client-name font-weight-bold mb-4">Client Name</h3>
-							    <ul class="client-meta list-unstyled">
-								    <li class="mb-2"><i class="fas fa-industry fa-fw me-2"></i><strong>Industry:</strong> Tech</li>
-								    <li class="mb-2"><i class="fas fa-users fa-fw me-2"></i><strong>Size:</strong> 100+</li>
-								    <li class="mb-2"><strong><i class="fas fa-link fa-fw me-2"></i>Website:</strong> <a class="theme-link" href="#">clientsite.com</a></li>
-								    
-							    </ul>
-							    <div class="client-bio mb-4">Short description of the client and project requirements. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</div>
-							    <h4 class="subheading mb-3">Project Requirements</h4>
-							    <ul class="mb-0">
-								    <li class="mb-2">Requirement lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-								    <li class="mb-2">Requirement donec pede justo, fringilla vel, aliquet nec.</li>
-								    <li class="mb-2">Requirement phasellus ullamcorper ipsum rutrum nunc. </li>
-							    </ul>
-						    </div><!--//client-info-->					
-						</div><!--//col-->
-				    </div><!--//row-->
-				</div><!--//project-meta--> {% endcomment %}
+			    
 				<div class="project-sections py-5">
 					<div class="project-section mb-5">
 					    <h3 class="project-section-title mb-3">Project Overview</h3>
@@ -54,7 +30,7 @@
 					     <h3 class="project-section-title">The Challenge</h3>
 					    <p>
 							But estimating the clv is not easy. Many complex models can be used for this, however usually these models do not allow for the user to derive what actually contributes to the different developments in the clv. 
-							Furthermore, the scopes by which these models can be used varies alot from company to company. At Miinto, the scopes should both include an overall strategic level in terms of budget planning and assessment, as well as a more operational scope, in which the digital marketing should be able to use the model to daily balance their marketing spend according to the clv. 
+							Furthermore, the scopes by which these models can be used varies alot from company to company. At Miinto, the scopes should both include an overall strategic level in terms of budget planning and assessment, as well as a more operational scope, in which the digital marketing team should be able to use the model to daily balance their marketing spend according to the clv. 
 							So, with the need for this explainability of the model as well as the different scopes by which the model should be used, I needed to come up with a simpler approach to the clv model. 
 						</p>
 					     
@@ -76,7 +52,7 @@
 								</li>
 							</ol>
 
-							Adding these three components gives us the per customer clv. To further enhance the usability of the model, I also setup customer acquision cost (cac) formula, with which we are then able to compare the difference between what Miinto is paying for a new customer vs. what Miinto is expected to derive from such customer in a 12 months lifetime span. 
+							Adding these three components give us the per customer clv. To further enhance the usability of the model, I also setup a customer acquision cost (cac) formula, with which we are able to compare the difference between what Miinto is paying for a new customer vs. what Miinto is expected to derive from such a customer in a 12 months lifetime span. 
 						</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-12 mb-5">
@@ -114,8 +90,8 @@
 							Once defined, the model was developed and deployed to all 13 markets. The reporting of the model was setup in PowerBI with which the digital marketing can monitor and adjust their daily spend levels to respect the longterm profitability. 
 							Furthermore, c-level can now follow the performance of the business and better understand and set future budget targets and KPIs. Thus, the model is a key point of departure at weekly and monthly performance meetings. 
 							With the three clearly defined parameters, everyone in the organization with access to the report can always drill down in the model's clv estimates and see what factor is contributing to the changes in their values. 
-							Finally, the report was furthermore enhanced with a historical comparison of the predicted 12 months clv and the actual 12 months clv of historical cohorts. With this addition, the accuracy of the model was measured as only having a 2.5% discrepancy between prediciton and actual clv - i.e. a clear proof of the quality of the model. 
-							This quality proof was further supported, when Boston Consulting Group did a diagnostic audit of the Miinto business model, in which they acknowledged the models validity and Miinto's usage hereof.
+							Finally, the report was furthermore enhanced with a historical comparison of the predicted 12 months clv and the actual 12 months clv of historical cohorts. With this addition, <b>the accuracy of the model was measured as only having a 2.5% discrepancy between prediciton and actual clv - i.e. a clear proof of the quality of the model</b>. 
+							This quality proof was further supported, when Boston Consulting Group did a diagnostic audit of the Miinto business model, in which they <b>acknowledged the models validity and Miinto's usage hereof</b>.
 						</p>
 					     
 					</div><!--//project-section-->
