--- a/templates/projects/datascience-on-the-fence-users-popup.html
+++ b/templates/projects/datascience-on-the-fence-users-popup.html
@@ -16,46 +16,22 @@
 	    </section>
 	    <section class="project px-3 py-5 p-md-5" style='padding-top: 0px !important;padding-bottom: 0px !important;'>
 		    <div class="container">
-			    {% comment %} <div class="project-meta theme-bg-light p-4">
-				    <div class="row g-4 g-lg-5">
-					    <div class="col-md-5 col-lg-4 col-xxl-3 d-none d-md-block">
-					        <img class="project-thumb img-fluid rounded" src="{% static '/images/project/project-3.jpg' %}" alt="">
-					    </div><!--//col-->
-						<div class="col-12 col-md-7 col-lg-8 col-xxl-9">
-						    <div class="client-info">
-							    <h3 class="client-name font-weight-bold mb-4">Client Name</h3>
-							    <ul class="client-meta list-unstyled">
-								    <li class="mb-2"><i class="fas fa-industry fa-fw me-2"></i><strong>Industry:</strong> Tech</li>
-								    <li class="mb-2"><i class="fas fa-users fa-fw me-2"></i><strong>Size:</strong> 100+</li>
-								    <li class="mb-2"><strong><i class="fas fa-link fa-fw me-2"></i>Website:</strong> <a class="theme-link" href="#">clientsite.com</a></li>
-								    
-							    </ul>
-							    <div class="client-bio mb-4">Short description of the client and project requirements. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</div>
-							    <h4 class="subheading mb-3">Project Requirements</h4>
-							    <ul class="mb-0">
-								    <li class="mb-2">Requirement lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-								    <li class="mb-2">Requirement donec pede justo, fringilla vel, aliquet nec.</li>
-								    <li class="mb-2">Requirement phasellus ullamcorper ipsum rutrum nunc. </li>
-							    </ul>
-						    </div><!--//client-info-->					
-						</div><!--//col-->
-				    </div><!--//row-->
-				</div><!--//project-meta--> {% endcomment %}
+			    
 				<div class="project-sections py-5">
 					<div class="project-section mb-5">
 					    <h3 class="project-section-title mb-3">Project Overview</h3>
 					    <p>
 							As much as <a href="https://d34w0339mx0ifp.cloudfront.net/content/2021_Ecommerce_Stats_Trends_Report_EN.pdf"><b>81%</b></a> of all website users abandon their online purchase after adding some item(s) to their cart. This is called the cart abandonment rate. 
 							This rate is a critical focus point for everyone trying to optimize their ecommerce performance. By lowering this rate, you are keeping the most relevant users on your site, thus increasing the chance they will complete their purchase and minimizing the risk that you will lose them to a competitor.
-							In other words, we need to maintain these on-the-fence users.
+							In other words, we need to figure out how to maintain these on-the-fence users.
 						</p>
 					</div><!--//project-section-->
 					
 					<div class="project-section mb-5">
 					     <h3 class="project-section-title">The Challenge</h3>
 					    <p>
-							But how do you reduce the cart abandonment rate. One way to is to implement a exit-intent popup providing some relevant information that makes the user stay on the site. 
-							However, defining such a feature without disturbing the users is a difficult task. Several questions arise: 
+							But how do you reduce the cart abandonment rate. One way to is to implement an exit-intent popup providing some relevant information that makes the user stay on the site. 
+							However, defining such a feature without disturbing the users is a difficult task. Thus, several questions arise: 
 							<i><ul>
 								<li>How do you define the timing of the trigger to launch the popup just exactly when the user is about to leave the site?</li>
 								<li>How do you target the most relevant users only?</li>
