--- a/templates/resume.html
+++ b/templates/resume.html
@@ -9,8 +9,8 @@
 		<section class="cta-section theme-bg-light py-5">
 			<div class="container text-center single-col-max-width">
 				<h2 class="heading mb-3">Online Resume</h2>
-				<div class="bio mb-4">I'm a data analyst specialised in machine learning and A/B tests for optimizing data-driven decision making. Below you can see by professional resume.
-					In addition, I write about data science, programming, web development etc. on <a class="text-link" href="/bloghome">my blog</a>. Want to know more about me and my work? 
+				<div class="bio mb-4">I'm a data analyst specialised in machine learning and A/B tests for optimizing data-driven decision making. Below you can see my professional resume.
+					In addition, I write about data science, web development etc. on <a class="text-link" href="/bloghome">my blog</a>. Want to know more about me and my work? 
 					Check out my project <a class="text-link" href="projects.html">portfolio</a> or <a class="text-link" href="/contact">contact/connect with me</a>.
 				</div><!--//bio-->
 				<div class="mb-4">
