--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 						<h2 class="name font-weight-bold mb-1" >Kristian Buhl Jørgensen</h2>
 						<div class="tagline mb-3">Data Enthusiast, Decision Optimizer</div>
 						<div class="bio mb-4">I'm a data analyst specialised in machine learning and A/B tests for optimizing data-driven decision making. 
-							I write about data science, programming, web development etc. on <a class="text-link" href="/bloghome">my blog</a>. Want to know more about me and my work? 
+							I write about data science, web development etc. on <a class="text-link" href="/bloghome">my blog</a>. Want to know more about me and my work? 
 							Check out my project <a class="text-link" href="/portfolio">portfolio</a> and <a class="text-link" href="/resume">online resume</a>.
 						</div><!--//bio-->
 						<div class="mb-4">
@@ -41,7 +41,7 @@
 						<div class="item-inner">
 							<div class="item-icon"><i class="fas fa-flask me-2"></i><i class="fas fa-spell-check"></i></div>
 							<h3 class="item-title">CRO, A/B Testing</h3>
-							<div class="item-desc">Allround skills for experimentation: from identifying pain areas, developing the test design, coding test variants, evaluating and validating the results and building data-based buisness case.</div>
+							<div class="item-desc">Allround skills for experimentation: from identifying pain areas, developing test design, coding test variants, evaluating and validating the results and building data-based buisness case.</div>
 						</div><!--//item-inner-->
 					</div><!--//item-->
 					<div class="item col-6 col-lg-4">
@@ -58,7 +58,7 @@
 							<div class="item-icon"><i class="fab fa-python me-2" style='color:#54B689'></i><i class="fas fa-code"></i></div>
 							<h3 class="item-title">Python</h3>
 							<div class="item-desc">Strong competencies in Python programming. Both for bottom-up OOP as well as for interacting with APIs. 
-												   In addition, Python is my primary data science tool with which I can perform fx time series forecasting & machine learning.</div>
+												   In addition, Python is my primary data science tool with which I perform fx time series forecasting & machine learning.</div>
 						</div><!--//item-inner-->
 					</div><!--//item-->
 					
@@ -66,7 +66,7 @@
 						<div class="item-inner">
 							<div class="item-icon"><i class="fab fa-js-square me-2" style='color:#54B689'></i><i class="fab fa-html5 me-2" style='color:#54B689'></i><i class="fab fa-css3-alt" style='color:#54B689'></i></div>
 							<h3 class="item-title">JS, HTML &amp; CSS</h3>
-							<div class="item-desc">Hands-on experience with general web development and A/B test variant designs using HTML, CSS and Javascript.</div>
+							<div class="item-desc">Hands-on experience with general web development and A/B test variant design using HTML, CSS and Javascript.</div>
 						</div><!--//item-inner-->
 					</div><!--//item-->
 					
@@ -82,7 +82,7 @@
 						<div class="item-inner">
 							<div class="item-icon"><i class="fab fa-docker me-2" style='color:#54B689'></i><i class="fab fa-dev" style='color:#54B689'></i></div>
 							<h3 class="item-title">Docker, Django &amp;  Flask</h3>
-							<div class="item-desc">Web and API Development. Experimenting with containerized setups and deployment on Heroku, Google Cloud, and AWS.   </div>
+							<div class="item-desc">Web and API Development. Experimenting with containerized setups and deployment on Heroku, Google Cloud, and AWS.</div>
 						</div><!--//item-inner-->
 					</div><!--//item-->
 					<!-- <div class="item col-6 col-lg-4">
@@ -93,64 +93,10 @@
 						</div>
 					</div>//item-inner -->
 				</div><!--//row-->
-				{% comment %} <div class="text-center py-3"><a href="services.html" class="btn btn-primary"><i class="fas fa-arrow-alt-circle-right me-2"></i>Services &amp; Pricing
-					
-				</a></div> {% endcomment %}
+				
 				
 			</div><!--//container-->
 		</section><!--//skills-section-->
-		
-		{% comment %}<div class="container"><hr></div>
-		 <section class="testimonials-section p-3 p-lg-5">
-			<div class="container">
-				<h2 class="section-title font-weight-bold mb-5">Testimonials</h2>
-				
-				<div class="testiomonial-carousel-container">
-					<div class="testimonial-carousel  tiny-slider">
-	                    <div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div><!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="{% static '/images/clients/profile-1.png' %}" alt="image"/>
-									</div>
-									<div class="meta">
-										<div class="name">Brandon James</div>
-										<div class="info">Project Manager, Google</div>
-									</div>
-								</div>
-							</div><!--//item-inner-->
-						</div><!--//item-->
-						
-						<div class="item">
-							<div class="item-inner">
-								<div class="quote-holder">
-									<blockquote class="quote-content">
-										Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-									</blockquote>
-									<i class="fas fa-quote-left"></i>
-								</div><!--//quote-holder-->
-								<div class="source-holder">
-									<div class="source-profile">
-										<img src="{% static '/images/clients/profile-2.png' %}" alt="image"/>
-									</div>
-									<div class="meta">
-										<div class="name">Kate Sanders</div>
-										<div class="info">Project Manager, Uber</div>
-									</div>
-								</div>
-							</div><!--//item-inner-->
-						</div><!--//item-->
-						
-					</div><!--//testimonial-carousel-->	
-				</div><!--//testimonial-carousel-container-->	
-			</div><!--//container-->
-		</section><!--//testimonials-section--> {% endcomment %}
 		
 		<div class="container"><hr></div>
 		
@@ -166,7 +112,7 @@
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
-										<h5 class="card-title"><a href="portfolio/project/web-data-privacy-engineering" class="theme-link">GTM Data Privacy Engineering</a></h5>
+										<h5 class="card-title"><a href="portfolio/project/web-data-privacy-engineering" class="theme-link">Data Privacy Engineering</a></h5>
 										<p class="card-text">Implementing a compliant Google Tag Manager (GTM) setup while using Server Side GTM for minimizing data loss in Google Analytics.</p>
 										<!-- <p class="card-text"><small class="text-muted">Client: Google</small></p> -->
 									</div>
