--- a/templates/projects/cro-a2r-recommendation-popup.html
+++ b/templates/projects/cro-a2r-recommendation-popup.html
@@ -7,7 +7,7 @@
     <div class="main-wrapper">
 	    <section class="cta-section theme-bg-light py-5">
 		    <div class="container single-col-max-width">
-			    <h2 class="heading text-center">Case Study: Add to Cart Popup</h2>
+			    <h2 class="heading text-center">Case Study: Add to Cart Recom. Popup</h2>
 			    <div class="project-intro text-center">
 					<p class="mb-0 lead">Improving performance by triggering relevant popup on add to cart event.</p>
 				</div>
