added GA, GTM and adjusted intro text

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
                 <div class="profile-section pt-3 pt-lg-0">
                     <a href="/"><img class="profile-image mb-3 rounded-circle mx-auto" src="{% static '/images/linkedin_picture.JPG' %}" alt="image" ></a>			
                     
-                    <div class="bio mb-3">Hi, my name is Kristian Buhl and I'm a CRO specialist & data analyst. Welcome to my personal website!</div><!--//bio-->
+                    <div class="bio mb-3">Hi, my name is Kristian Buhl and I'm a CRO specialist & data analyst. Welcome to my website!</div><!--//bio-->
                     <ul class="social-list list-inline py-2 mx-auto">
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/kristianj%C3%B8rgensen/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
                         <li class="list-inline-item"><a href="https://medium.com/@kristian2890"><i class="fab fa-medium fa-fw"></i></a></li>
