--- a/templates/projects/cro-voucher-test.html
+++ b/templates/projects/cro-voucher-test.html
@@ -16,31 +16,6 @@
 	    </section>
 	    <section class="project px-3 py-5 p-md-5" style='padding-top: 0px !important;padding-bottom: 0px !important;'>
 		    <div class="container">
-			    {% comment %} <div class="project-meta theme-bg-light p-4">
-				    <div class="row g-4 g-lg-5">
-					    <div class="col-md-5 col-lg-4 col-xxl-3 d-none d-md-block">
-					        <img class="project-thumb img-fluid rounded" src="{% static '/images/project/project-3.jpg' %}" alt="">
-					    </div><!--//col-->
-						<div class="col-12 col-md-7 col-lg-8 col-xxl-9">
-						    <div class="client-info">
-							    <h3 class="client-name font-weight-bold mb-4">Client Name</h3>
-							    <ul class="client-meta list-unstyled">
-								    <li class="mb-2"><i class="fas fa-industry fa-fw me-2"></i><strong>Industry:</strong> Tech</li>
-								    <li class="mb-2"><i class="fas fa-users fa-fw me-2"></i><strong>Size:</strong> 100+</li>
-								    <li class="mb-2"><strong><i class="fas fa-link fa-fw me-2"></i>Website:</strong> <a class="theme-link" href="#">clientsite.com</a></li>
-								    
-							    </ul>
-							    <div class="client-bio mb-4">Short description of the client and project requirements. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</div>
-							    <h4 class="subheading mb-3">Project Requirements</h4>
-							    <ul class="mb-0">
-								    <li class="mb-2">Requirement lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
-								    <li class="mb-2">Requirement donec pede justo, fringilla vel, aliquet nec.</li>
-								    <li class="mb-2">Requirement phasellus ullamcorper ipsum rutrum nunc. </li>
-							    </ul>
-						    </div><!--//client-info-->					
-						</div><!--//col-->
-				    </div><!--//row-->
-				</div><!--//project-meta--> {% endcomment %}
 				<div class="project-sections py-5">
 					<div class="project-section mb-5">
 					    <h3 class="project-section-title mb-3">Project Overview</h3>
@@ -56,12 +31,14 @@
 					
 					<div class="project-section mb-5">
 					     <h3 class="project-section-title">The Approach &amp; Solution</h3>
-					    <p>In order to try improve campaign performance, I developed the following hyposthesis: <b>Highlighting the onsite voucher will drive higher conversion rate</b>. 
+					    <p>In order to try improve campaign performance, I developed the following hyposthesis: <b>Highlighting the onsite voucher will drive a higher conversion rate</b>. 
 							With a boost in conversion rate, the campaign GOV (the primary objective) will increase as well. 
 							To test the hyposthesis, I developed two versions of test variants highlighting the onsite voucher: 
-							(<b>1</b>) a variant with highlight of price reduction by applying the onsite voucher code at checkout and 
-							(<b>2</b>) a variant with a countdown feature which highlights when the onsite voucher code will expire.
-							For the first variant, the test variant will display the voucher discount price clearly for the user - thus making the extra savings even clearer.
+							<ol>
+								<li>a variant with highlight of price reduction by applying the onsite voucher code at checkout (see image 1 below).</li>
+								<li>a variant with a countdown feature which highlights when the onsite voucher code will expire (see image 2 below).</li>
+							</ol>
+							For the first variant, the test variant will display the realized voucher discount price clearly for the user - thus making the extra savings even clearer.
 							For the second variant, the test variant will ignite a sense of urgency to make the user place an order before the deadline. 	
 							For the control variant, the onsite voucher was only visible in the upper green bar above the navigation section.</p>
 					    <div class="row mt-5">
@@ -115,30 +92,11 @@
 					     
 					    <p>During the campaign periods, the test variants performed significantly better than the original setup. 
 							The price update variant did 14% better and the countdown variant 18% better on conversion rate compared to the control version.
-						Running these tests proved highly effective and boosted the GOV by an estimated 9%. As a result, these highlights methods can be deployed during future campaigns to optimize performance.</p>
+						Running these tests proved highly effective and boosted the GOV by an estimated 9% during the test period alone. As a result, these highlights methods can be deployed during future campaigns to optimize performance significantly.</p>
 					     
 					</div><!--//project-section-->
 					
-					{% comment %} <div class="project-section mb-5">
-					     <h3 class="project-section-title mb-3">Client Testimonial</h3>
-                    </div><!--//project-section-->
-				    <div class="client-quote">
-						<div class="quote-holder">
-							<blockquote class="quote-content">
-								Simon is a brilliant software engineer! Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.
-							</blockquote>
-							<i class="fas fa-quote-left"></i>
-						</div><!--//quote-holder-->
-						<div class="source-holder">
-							<div class="source-profile">
-								<img src="{% static '/images/clients/profile-4.png' %}" alt="image"/>
-							</div>
-							<div class="meta">
-								<div class="name">James Lee</div>
-								<div class="info">Product Manager, Amazon</div>
-							</div>
-						</div>
-					</div> {% endcomment %}
+					
 				</div>
 		    </div>
 	    </section>
@@ -146,13 +104,10 @@
 	    <section class="promo-section theme-bg-light py-5 text-center" style='margin-bottom:0px !important;'>
 		    <div class="container single-col-max-width">
 				<h2 class="title">Want to connect?</h2>
-			    <p>Please feel free to reach out, if you are interested in knowing more about me and my projects or want to connect and hear how I might help your organization.</p>                <div class="text-center"><a class="btn btn-primary" href="/contact" target="_blank"><i class="fas fa-paper-plane me-2"></i>Contact Me</a></div>
+			    <p>Please feel free to reach out, if you are interested in knowing more about me and my projects or want to connect and hear how I might help your organization.</p>                
+				<div class="text-center"><a class="btn btn-primary" href="/contact" target="_blank"><i class="fas fa-paper-plane me-2"></i>Contact Me</a></div>
 		    </div><!--//container-->
 	    </section><!--//promo-section-->
-    
-		{% comment %} <footer class="footer text-center py-4">
-					<small class="copyright">Template Copyright &copy; <a href="https://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a></small>
-				</footer> {% endcomment %}
 
     </div><!--//main-wrapper-->
 
