--- a/templates/projects/datascience-cac-cltc.html
+++ b/templates/projects/datascience-cac-cltc.html
@@ -123,7 +123,8 @@
 	    <section class="promo-section theme-bg-light py-5 text-center" style='margin-bottom:0px !important;'>
 		    <div class="container single-col-max-width">
 				<h2 class="title">Want to connect?</h2>
-			    <p>Please feel free to reach out, if you are interested in knowing more about me and my projects or want to connect and hear how I might help your organization.</p>                <div class="text-center"><a class="btn btn-primary" href="/contact" target="_blank"><i class="fas fa-paper-plane me-2"></i>Contact Me</a></div>
+			    <p>Please feel free to reach out, if you are interested in knowing more about me and my projects or want to connect and hear how I might help your organization.</p>                
+				<div class="text-center"><a class="btn btn-primary" href="/contact" target="_blank"><i class="fas fa-paper-plane me-2"></i>Contact Me</a></div>
 		    </div><!--//container-->
 	    </section><!--//promo-section-->
     
