--- a/templates/head.html
+++ b/templates/head.html
@@ -14,9 +14,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="DevCard Bootstrap 5 Template">
-	<meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
-	<link rel="shortcut icon" href="favicon.ico"> 
+	<meta name="description" content="Buhlian - Data Science, Web Development and more.">
+	<meta name="author" content="Kristian Jørgensen">    
+	<!-- <link rel="shortcut icon" href="favicon.ico">  -->
 	
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
