corrected static refs for debug = false to work

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 					</div><!--//col-->
 					
 					<div class="col-md-5 col-lg-5">
-					    <img style="margin-left:10%;margin-right:10% !important;"class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="{% static '/images/linkedin_picture.JPG' %}" alt="">
+					    <img style="margin-left:10%;margin-right:10% !important;"class="profile-image img-fluid mb-3 mb-lg-0 me-md-0" src="{% static 'images/linkedin_picture.JPG' %}" alt="">
 					</div>
 				</div>
 			</div>
@@ -108,7 +108,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/WEB_cookie.jpg' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/WEB_cookie.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
@@ -132,7 +132,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_fewleft.jpg' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/CRO_fewleft.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
@@ -156,7 +156,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_npslifetime.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_npslifetime.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
@@ -180,7 +180,7 @@
 						<div class="card project-card">
 							<div class="row no-gutters">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_clv.jpg' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_clv.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">
