--- a/templates/head.html
+++ b/templates/head.html
@@ -22,13 +22,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 	
 	<!-- FontAwesome JS -->
-    <script defer src="{% static '/fontawesome/js/all.js' %}"></script>
+    <script defer src="{% static 'fontawesome/js/all.js' %}"></script>
     
     <!-- Plugin CSS -->
-    <link rel="stylesheet" href="{% static '/plugins/tiny-slider/tiny-slider.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/tiny-slider/tiny-slider.css' %}">
 
 	<!-- Theme CSS -->  
-	<link id="theme-style" rel="stylesheet" href="{% static '/css/theme-1.css' %}">
+	<link id="theme-style" rel="stylesheet" href="{% static 'css/theme-1.css' %}">
 
 	<!-- TinyMCE css -->
     <link href="{% static 'css/github.css' %}" rel="stylesheet">
