--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -36,7 +36,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/WEB_cookie.jpg' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/WEB_cookie.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 3-->
@@ -60,7 +60,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_fewleft.jpg' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/CRO_fewleft.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 0-->
@@ -84,7 +84,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_npslifetime.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_npslifetime.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 5-->
@@ -109,7 +109,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_clv.jpg' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_clv.jpg' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 4-->
@@ -133,7 +133,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_otfpopup.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_otfpopup.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">  <!--//project 8-->
@@ -159,7 +159,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_voucher.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/CRO_voucher.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 1-->
@@ -184,7 +184,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_productdescr.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_productdescr.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">  <!--//project 7-->
@@ -208,7 +208,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/DS_npsdriver.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/DS_npsdriver.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">  <!--//project 6-->
@@ -232,7 +232,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_urgencycheckout.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/CRO_urgencycheckout.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">  <!--//project 14-->
@@ -256,7 +256,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_a2cpopup.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/CRO_a2cpopup.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body">  <!--//project 14-->
@@ -280,7 +280,7 @@
 						<div class="card project-card">
 							<div class="row">
 								<div class="col-12 col-xl-5 card-img-holder">
-									<img src="{% static '/images/project/CRO_stickycta.JPG' %}" class="card-img" alt="image">
+									<img src="{% static 'images/project/CRO_stickycta.JPG' %}" class="card-img" alt="image">
 								</div>
 								<div class="col-12 col-xl-7">
 									<div class="card-body"> <!--//project 2-->
