--- a/templates/projects/datascience-cac-cltc.html
+++ b/templates/projects/datascience-cac-cltc.html
@@ -56,10 +56,10 @@
 						</p>
 					    <div class="row mt-5">
 						    <div class="col-12 col-lg-12 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/pic_clv.JPG' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static 'images/project/pic_clv.JPG' %}" alt="image">
 						    </div>
 						    <!-- <div class="col-12 col-lg-6 mb-5">
-							    <img class="img-fluid rounded" src="{% static '/images/project/project-figure-2.jpg' %}" alt="image">
+							    <img class="img-fluid rounded" src="{% static 'images/project/project-figure-2.jpg' %}" alt="image">
 						    </div> -->
 					    </div>
 						    
@@ -108,7 +108,7 @@
 						</div><!--//quote-holder-->
 						<div class="source-holder">
 							<div class="source-profile">
-								<img src="{% static '/images/project/bcg.jpg' %}" alt="image"/>
+								<img src="{% static 'images/project/bcg.jpg' %}" alt="image"/>
 							</div>
 							<div class="meta">
 								<div class="name">Miinto Growth Diagnostics Report</div> 
