--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -27,4 +27,5 @@
 <script>hljs.initHighlightingOnLoad();</script>
   
 
- 
+ <!-- CookieConsent -->
+ <script src="https://cdn.websitepolicies.io/lib/cookieconsent/cookieconsent.min.js" defer></script><script>window.addEventListener("load",function(){window.wpcc.init({"colors":{"popup":{"background":"#edfdfa","text":"#000000"},"button":{"background":"#54B689","text":"#ffffff"}},"border":"thin","corners":"small","padding":"small","margin":"small","transparency":"5","fontsize":"small","content":{"href":"/cookie-policy","message":"This website uses necessary &amp; analytical cookies to ensure you get the best experience. "}})});</script>
